[tool.poetry]
name = "boxapi"
version = "0.1.0"
description = "Python client for https://boxapi.ir to crawl and read Instagram data."
authors = ["Amir Hosein Salimi <iamirhoseinslaimi@gmail.com>"]
license = "MIT"
homepage = "https://github.com/amirhoseinsalimi/boxapi-python"
repository = "https://github.com/amirhoseinsalimi/boxapi-python"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
